# operations-debs-contenttranslation-apertium-eu-es

./: AUTHORS  Makefile.am  NEWS  README  apertium-eu-es.es.dix  apertium-eu-es.eu-es.rlx  apertium-eu-es.eu-es.t1x  apertium-eu-es.eu-es.t2x  apertium-eu-es.eu-es.t3x  apertium-eu-es.eu.tsx  apertium-eu-es.ordinals.t1x  apertium-eu-es.post-es.dix  apertium-eu-es_0.3.3~r56159.orig.tar.gz.delta  apertium-eu-es_0.3.3~r56159.orig.tar.gz.id  configure.ac  modes.xml
debian/: changelog  control  copyright
dev/: apertium-eu-es.eu-es.ldx  apertium-eu-es.eu-es.lrx  fran-regler.xml  main_sect.1line.xml
